crates/hwpx/tests/snapshots/parse_fixtures__border_fill_tests__parse_border_fill_with_fill_brush.snap
---
source: crates/hwpx/tests/parse_fixtures.rs
expression: border_fill
---
slash:
  "@type": NONE
  "@Crooked": false
  "@isCounter": false
backSlash:
  "@type": NONE
  "@Crooked": false
  "@isCounter": false
leftBorder:
  "@type": NONE
  "@width": 0.1 mm
  "@color": "#000000"
rightBorder:
  "@type": NONE
  "@width": 0.1 mm
  "@color": "#000000"
topBorder:
  "@type": NONE
  "@width": 0.1 mm
  "@color": "#000000"
bottomBorder:
  "@type": NONE
  "@width": 0.1 mm
  "@color": "#000000"
diagonal:
  "@type": SOLID
  "@width": 0.1 mm
  "@color": "#000000"
fillBrush:
  winBrush:
    "@faceColor": "#FFFFFF"
    "@hatchColor": "#000000"
    "@alpha": 0
"@id": 3
"@threeD": false
"@shadow": false
"@centerLine": NONE
"@breakCellSeparateLine": false
