crates/hwpx/tests/snapshots/parse_fixtures__border_fill_tests__parse_simple_border_fill.snap
---
source: crates/hwpx/tests/parse_fixtures.rs
expression: border_fill
---
slash:
  "@type": NONE
  "@Crooked": false
  "@isCounter": false
backSlash:
  "@type": NONE
  "@Crooked": false
  "@isCounter": false
leftBorder:
  "@type": NONE
  "@width": 0.1 mm
  "@color": "#000000"
rightBorder:
  "@type": NONE
  "@width": 0.1 mm
  "@color": "#000000"
topBorder:
  "@type": NONE
  "@width": 0.1 mm
  "@color": "#000000"
bottomBorder:
  "@type": NONE
  "@width": 0.1 mm
  "@color": "#000000"
diagonal:
  "@type": SOLID
  "@width": 0.1 mm
  "@color": "#000000"
"@id": 1
"@threeD": false
"@shadow": false
"@centerLine": NONE
"@breakCellSeparateLine": false
